# serializer version: 1
# name: TestAuditLogging.test_log_actor_uuid
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'USER',
        'user_id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 3,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'READ',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': 'be584b90-b256-46f5-83e1-4e6a0f8b4cc3',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_admin_operation[CREATE]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'ADMIN',
        'user_id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 12,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'CREATE',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': 'be584b90-b256-46f5-83e1-4e6a0f8b4cc3',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_admin_operation[DELETE]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'ADMIN',
        'user_id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 15,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'DELETE',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': 'be584b90-b256-46f5-83e1-4e6a0f8b4cc3',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_admin_operation[READ]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'ADMIN',
        'user_id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 13,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'READ',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': 'be584b90-b256-46f5-83e1-4e6a0f8b4cc3',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_admin_operation[UPDATE]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'ADMIN',
        'user_id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 14,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'UPDATE',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': 'be584b90-b256-46f5-83e1-4e6a0f8b4cc3',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_anonymous_role[CREATE]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'ANONYMOUS',
        'user_id': '',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 20,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'CREATE',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_anonymous_role[DELETE]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'ANONYMOUS',
        'user_id': '',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 23,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'DELETE',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_anonymous_role[READ]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'ANONYMOUS',
        'user_id': '',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 21,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'READ',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_anonymous_role[UPDATE]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'ANONYMOUS',
        'user_id': '',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 22,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'UPDATE',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_owner_operation[CREATE]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'OWNER',
        'user_id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 4,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'CREATE',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_owner_operation[DELETE]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'OWNER',
        'user_id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 7,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'DELETE',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_owner_operation[READ]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'OWNER',
        'user_id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 5,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'READ',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_owner_operation[UPDATE]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'OWNER',
        'user_id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 6,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'UPDATE',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_status[FORBIDDEN]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'OWNER',
        'user_id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 25,
        'status': 'FORBIDDEN',
      }),
      'level': 0,
      'message': 'FORBIDDEN',
      'operation': 'READ',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_status[SUCCESS]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'OWNER',
        'user_id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 24,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'READ',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_system_operation[CREATE]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'SYSTEM',
        'user_id': '',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 16,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'CREATE',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_system_operation[DELETE]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'SYSTEM',
        'user_id': '',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 19,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'DELETE',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_system_operation[READ]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'SYSTEM',
        'user_id': '',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 17,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'READ',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_system_operation[UPDATE]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'SYSTEM',
        'user_id': '',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 18,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'UPDATE',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_user_operation[CREATE]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'USER',
        'user_id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 8,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'CREATE',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': 'be584b90-b256-46f5-83e1-4e6a0f8b4cc3',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_user_operation[DELETE]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'USER',
        'user_id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 11,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'DELETE',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': 'be584b90-b256-46f5-83e1-4e6a0f8b4cc3',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_user_operation[READ]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'USER',
        'user_id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 9,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'READ',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': 'be584b90-b256-46f5-83e1-4e6a0f8b4cc3',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_user_operation[UPDATE]
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': '',
        'role': 'USER',
        'user_id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 10,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'UPDATE',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': 'be584b90-b256-46f5-83e1-4e6a0f8b4cc3',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
# name: TestAuditLogging.test_log_user_with_backend
  dict({
    '@timestamp': '2020-06-01T00:00:00.000Z',
    'audit_event': dict({
      'actor': dict({
        'ip_address': '192.168.1.1',
        'provider': 'some.auth.Backend',
        'role': 'OWNER',
        'user_id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
      }),
      'date_time': '2020-06-01T00:00:00.000Z',
      'environment': '',
      'extra': dict({
        'additional_information': '',
        'source_pk': 27,
        'status': 'SUCCESS',
      }),
      'level': 0,
      'message': 'SUCCESS',
      'operation': 'READ',
      'origin': 'atv',
      'target': dict({
        'endpoint': '',
        'id': '7e564b45-527f-4ea6-92c7-3d39ba05733c',
        'lookup_field': '',
        'type': 'User',
      }),
    }),
  })
# ---
